[package]
name = "rpp2"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
#embassy-embedded-hal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
#embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy" }
#embassy-net = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
#embassy-net-wiznet = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
#embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
#embassy-usb-logger = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy" }

#cyw43 = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "firmware-logs"] }
#cyw43-pio = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-graphics = { version = "0.8.1", features = ["defmt"] }
glam = { version = "0.30.4", default-features = false, features = ["nostd-libm"] }
heapless = "0.8.0"
libm = "0.2.15"
static_cell = "2.1.1"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
bytemuck = "1.23.1"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
lto = "fat"
