[package]
name = "rpp2"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy" }
#embassy-embedded-hal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy" }
#embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy" }
#embassy-net = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
#embassy-net-wiznet = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy" }
#embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy" }
#embassy-usb-logger = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy" }

#cyw43 = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["firmware-logs"] }
#cyw43-pio = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy" }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"

bytemuck = "1.23.1"
embedded-graphics = { version = "0.8.1" }
glam = { version = "0.30.4", default-features = false, features = ["nostd-libm"] }
heapless = "0.8.0"
libm = "0.2.15"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
static_cell = "2.1.1"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
lto = "fat"
