[package]
name = "rpp2"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.8.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "rom-func-cache", "intrinsics", "rom-v2-intrinsics"] }
embassy-time = { version = "0.5.0" }
embassy-sync = { version = "0.7.2" }
# embassy-embedded-hal = { version = "0.5.0" }
# embassy-futures = { version = "0.1.2" }
# embassy-net = { version = "0.7.1", features = ["tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
# embassy-net-wiznet = { version = "0.2.1" }
# embassy-usb = { version = "0.5.1" }
# embassy-usb-logger = { version = "0.5.1" }

# cyw43 = { version = "0.5.0", features = ["firmware-logs"] }
# cyw43-pio = { version = "0.8.0" }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"

bytemuck = "1.23.2"
embedded-graphics = { version = "0.8.1" }
glam = { version = "0.30.5", default-features = false, features = ["nostd-libm"] }
heapless = "0.9.1"
libm = "0.2.15"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
static_cell = "2.1.1"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
lto = "fat"
